# pico-projects

./: .gitignore
pico-ir2mqtt/: CMakeLists.txt  README.md  ir2mqtt.c  lwipopts.h
pico-led2mqtt/: .env.EXAMPLE  CMakeLists.txt  README.md  led2mqtt.c
pico-temperature/: .env.EXAMPLE  CMakeLists.txt  README.md  lwipopts_examples_common.h  temperature.c
